--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,7 @@
 <h1>Prueba1</h1>
 <h2>Prueba2</h2>
 <h3>Prueba3</h3>
+<h2>PRO_REINI</h2>
+<h4>Prueba_browser_sync + actualizado</h4>
 </body>
 </html>
