--- a/site/prueba3.html
+++ b/site/prueba3.html
@@ -12,7 +12,7 @@
 		<a href="#Studies">Education</a>
 		<a href="#FreeT">Free Time</a>
 		<a href="#Future">Future Plans</a>
-		<a href="#Opinion">Favourite Foods</a>
+		<a href="#Opinion">Opinion</a>
 	</nav>
 </header>
 <p>
