--- a/site/prueba3.html
+++ b/site/prueba3.html
@@ -13,6 +13,7 @@
 		<a href="#FreeT">Free Time</a>
 		<a href="#Future">Future Plans</a>
 		<a href="#Opinion">Opinion</a>
+		<a href="#me">Photo</a>
 	</nav>
 </header>
 <p>
@@ -60,7 +61,7 @@ Well i studied in:<br>
 		<li>IPads</li>
 		<li>Tablets</li>
 	</ul>
-	It's something normal nowadats but from my point of view it's the beginning of the end, joke hehe.
+	It's something normal nowadays but from my point of view it's the beginning of the end, joke hehe.
 </article>
 		</section>
 	</p>
@@ -73,7 +74,8 @@ Well i studied in:<br>
 		</section>
 	</p>
 	<footer>
-		<a href="#index">Back to top</a><br>
+		<p><a href="#index">Back to top</a></p>
+		<img id="me" src="ousvxcn2qqgp.png" width="200px" height="200px"><br>
 		Posted by &copy; ObiWan, March 2019.
 	</footer>
 </body>
